Practice10_1 Refactor ProductManager to use a Nested Class

--- a/src/practices/data/resources_pt_BR.properties
+++ b/src/practices/data/resources_pt_BR.properties
@@ -5,6 +5,6 @@
 # Proin dapibus sapien vel ante. Aliquam erat volutpat. Pellentesque sagittis ligula eget metus.
 # Vestibulum commodo. Ut rhoncus gravida arcu.
 #
-product={0}, Price: {1}, Rating: {2}, Best Before: {3}, DEFAULT
+product={0}, Preco: {1}, Avalicao: {2}, Expira em: {3}, BR
 review=Review: {0}\t{1}
-no.reviews=Not Reviewed
+no.reviews=Nao Revisado
