--- a/src/practices/data/resources_en_CA.properties
+++ b/src/practices/data/resources_en_CA.properties
@@ -5,6 +5,6 @@
 # Proin dapibus sapien vel ante. Aliquam erat volutpat. Pellentesque sagittis ligula eget metus.
 # Vestibulum commodo. Ut rhoncus gravida arcu.
 #
-product={0}, Price: {1}, Rating: {2}, Best Before: {3}, DEFAULT
+product={0}, Price: {1}, Rating: {2}, Best Before: {3}, CA
 review=Review: {0}\t{1}
 no.reviews=Not Reviewed
